syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.companiaservicegrpc.grpc";

service companiaService{
  rpc getOneByID(idCompania) returns (CompaniaObject){}
  rpc getAll(EmptyCompania) returns (CompaniaList){}
}
message idCompania{
  int64 id = 1;
}

message CompaniaObject{
  int64 id = 1;
  int32 numeroCompania = 2;
  string actividad = 3;
  int32 status = 4;
}

message EmptyCompania{

}

message CompaniaList{
  repeated CompaniaObject compania = 1;
}